src/scss/layout/_nav.scss
@use '../abstracts/' as *;

//* Navigation

nav {
  position: fixed;
  display: flex;
  justify-content: space-between;
  align-items: center;
  z-index: 99;
  top: 0;
  left: 0;
  right: 0;
  height: 3.6rem;
  padding-top: 0.2rem;
  padding-inline: 1.3rem 2rem;
  background: $dark-bg;
  box-shadow: $nav-shadow;

  @include mqMobile {
    padding-inline: 0.75rem 0rem;
  }

  @include mqSmall {
    padding-inline: 0.5rem 0rem;
  }

  ul {
    display: flex;
    gap: 1.75rem;

    @include mqMobile {
      display: none;
      flex-direction: column;
      align-self: flex-start;
      justify-content: flex-end;
      text-align: right;
      gap: 1.25rem;
      margin-top: 2.5rem;
      margin-left: auto;
      padding: 1.1rem 2rem 1.5rem;
      background: $dark-bg;
    }
  }

  a {
    position: relative;
    width: min-content;
    transition: $ease;
    padding-top: 40px;

    &::after {
      @include clearfix;
      bottom: -2px;
      left: 0;
      width: 0%;
      border-bottom: 1px solid $light-bg;
      transition: $ease;
    }

    &:hover::after {
      width: 100%;
    }

    &:active {
      font-weight: 500;
    }
  }

  a[aria-current='page'] {
    color: $gold;

    &::after {
      @include clearfix;
      width: 100%;
      left: 0;
      bottom: -2px;
      border-bottom: 1px solid $gold;
      transition: $ease;
    }
  }

  img {
    width: 22rem;

    @include mqMobile {
      position: absolute;
      width: 20rem;
    }

    @include mqSmall {
      width: 17rem;
    }
  }
}

